# GlobalTaskHub

./: LICENSE  README.md  mkdocs.yml  pyproject.toml  test.db
docs/: application.md  application.rst  conf.py  domain.md  domain.rst  index.md  index.rst  infrastructure.md  infrastructure.rst  presentation.rst
global_task_hub/: __init__.py
global_task_hub/application/: __init__.py  use_cases.py
global_task_hub/domain/: __init__.py  entities.py  interfaces.py
global_task_hub/infrastructure/: __init__.py  database.py  external.py
global_task_hub/infrastructure/network/: health_socket.py
global_task_hub/presentation/: __init__.py  api.py  cli.py
scripts/: security_check.py
tests/integration/: test_flow.py
