[project]
name = "global-task-hub"
version = "0.1.0"
description = "A clean architecture Python backend project."
authors = [
    {name = "AndresBay",email = "andresbaymon@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# Framework & DB Engines
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.0"       # Database Management
psycopg2-binary = "^2.9"    # Postgres adapter
# CLI
typer = "^0.9.0"
# HTTP Client
httpx = "^0.26.0"
# Internationalization
babel = "^2.14.0"
# Session (Example using signed cookies)
itsdangerous = "^2.1.2"

[tool.poetry.group.dev.dependencies]
# Code-Based Testing
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
# Documentation
mkdocs = "^1.5.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
# Security
bandit = "^1.7.6"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Configuration for Bandit (Security)
[tool.bandit]
exclude_dirs = ["tests", "docs"]